Reserved space for images to prevent shifting
Added a default height to images with auto width to reserve space to prevent portions of the page from
shifting if the image loads slowly/doesn't load at all

--- a/css/recipe-styles.css
+++ b/css/recipe-styles.css
@@ -14,8 +14,8 @@ h4 {
 }
 
 img {
-    width: 400px;
-    height: auto;
+    width: auto;
+    height: 300px;
     margin: 0px;
     display: block;
 }
